--- a/package.json
+++ b/package.json
@@ -24,11 +24,9 @@
     ],
     "dependencies": {
         "@elizaos/core": "workspace:*",
-        "@huggingface/transformers": "3.3.2",
         "echogarden": "2.0.14",
         "gif-frames": "1.0.1",
         "nodejs-whisper": "0.2.6",
-        "playwright-core": "1.49.1",
         "zod": "3.24.1",
         "openai": "4.80.0",
         "@cliqz/adblocker-playwright": "1.34.0",
@@ -37,7 +35,8 @@
         "@echogarden/speex-resampler-wasm": "0.2.1",
         "ffmpeg-static": "5.2.0",
         "fluent-ffmpeg": "2.1.3",
-        "node-cache": "5.1.2"
+        "node-cache": "5.1.2",
+        "playwright": "1.49.1"
     },
     "devDependencies": {
         "@types/node": "22.10.8",
@@ -51,8 +50,7 @@
     },
     "peerDependencies": {
         "onnxruntime-node": "1.20.1",
-        "whatwg-url": "7.1.0",
-        "playwright-core": "1.49.1"
+        "whatwg-url": "7.1.0"
     },
     "trustedDependencies": {
         "onnxruntime-node": "1.20.1",
