--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
         "ffmpeg-static": "5.2.0",
         "fluent-ffmpeg": "2.1.3",
         "node-cache": "5.1.2",
-        "playwright": "1.49.1"
+        "playwright": "1.49.1",
+        "dotenv": "^16.0.3"
     },
     "devDependencies": {
         "@types/node": "22.10.8",
