--- a/package.json
+++ b/package.json
@@ -24,20 +24,15 @@
     ],
     "dependencies": {
         "@elizaos/core": "workspace:*",
-        "echogarden": "2.0.14",
-        "gif-frames": "1.0.1",
-        "nodejs-whisper": "0.2.6",
-        "zod": "3.24.1",
-        "openai": "4.80.0",
-        "@cliqz/adblocker-playwright": "1.34.0",
         "@echogarden/espeak-ng-emscripten": "0.3.3",
         "@echogarden/kissfft-wasm": "0.2.0",
         "@echogarden/speex-resampler-wasm": "0.2.1",
         "ffmpeg-static": "5.2.0",
         "fluent-ffmpeg": "2.1.3",
+        "gif-frames": "0.4.1",
         "node-cache": "5.1.2",
-        "playwright": "1.49.1",
-        "dotenv": "^16.0.0"
+ 
+        "echogarden": "2.0.7"
     },
     "devDependencies": {
         "@types/node": "22.10.8",
