--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
     "compilerOptions": {
         "outDir": "dist",
         "rootDir": "src",
-        "types": ["node"]
+        "types": ["node"],
+        "module": "Node16",
+        "moduleResolution": "Node16"
     },
     "include": ["src/**/*.ts", "src/**/*.d.ts"]
 }
