--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "exports": {
         "./package.json": "./package.json",
         ".": {
-            "types": "./dist/index.d.ts",
-            "import": "./dist/index.js",
-            "require": "./dist/index.cjs"
+            "import": {
+                "@elizaos/source": "./src/index.ts",
+                "types": "./dist/index.d.ts",
+                "default": "./dist/index.js"
+            }
         }
     },
     "files": [
@@ -29,7 +31,6 @@
         "fluent-ffmpeg": "2.1.3",
         "gif-frames": "0.4.1",
         "node-cache": "5.1.2",
- 
         "echogarden": "2.0.7"
     },
     "devDependencies": {
