--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,7 @@
     "compilerOptions": {
         "outDir": "dist",
         "rootDir": "src",
-        "types": ["node"],
-        "module": "Node16",
-        "moduleResolution": "Node16"
+        "types": ["node"]
     },
     "include": ["src/**/*.ts", "src/**/*.d.ts"]
 }
