--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "fluent-ffmpeg": "2.1.3",
         "gif-frames": "0.4.1",
         "node-cache": "5.1.2",
+        "nodejs-whisper": "0.2.0",
         "echogarden": "2.0.7"
     },
     "devDependencies": {
