--- a/package.json
+++ b/package.json
@@ -23,20 +23,18 @@
         "tsup.config.ts"
     ],
     "dependencies": {
-        "@elizaos/core": "workspace:*",
-        "@echogarden/espeak-ng-emscripten": "0.3.3",
-        "@echogarden/kissfft-wasm": "0.2.0",
-        "@echogarden/speex-resampler-wasm": "0.2.1",
-        "ffmpeg-static": "5.2.0",
-        "fluent-ffmpeg": "2.1.3",
-        "gif-frames": "0.4.1",
-        "node-cache": "5.1.2",
+        "@deepgram/sdk": "^3.9.0",
+        "@elizaos/core": "../eliza/packages/core",
+        "echogarden": "2.0.7",
+        "formdata-node": "^6.0.3",
         "nodejs-whisper": "0.1.18",
-        "echogarden": "2.0.7"
+        "openai": "^4.81.0",
+        "zod": "^3.24.1"
     },
     "devDependencies": {
         "@types/node": "22.10.8",
-        "tsup": "8.3.5"
+        "tsup": "8.3.5",
+        "typescript": "^5.7.3"
     },
     "scripts": {
         "build": "tsup --format esm,cjs --dts",
@@ -44,19 +42,19 @@
         "lint": "eslint --fix  --cache .",
         "postinstall": "node scripts/postinstall.js"
     },
-    "peerDependencies": {
-        "onnxruntime-node": "1.20.1",
-        "whatwg-url": "7.1.0"
-    },
-    "trustedDependencies": {
-        "onnxruntime-node": "1.20.1",
-        "sharp": "0.33.5"
-    },
     "agentConfig": {
         "pluginType": "elizaos:client:1.0.0",
         "pluginParameters": {
             "OPENAI_API_KEY": {
                 "type": "string"
+            },
+            "OPENAI_BASE_URL": {
+                "type": "string",
+                "default": "https://api.openai.com"
+            },
+            "ELEVENLABS_XI_API_URL": {
+                "type": "string",
+                "default": "https://api.elevenlabs.io/v1"
             },
             "ELEVENLABS_XI_API_KEY": {
                 "type": "string"
