--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,25 @@
 {
-    "extends": "../core/tsconfig.json",
     "compilerOptions": {
-        "module": "NodeNext",
         "outDir": "dist",
         "rootDir": "src",
         "types": ["node"],
+        "lib": ["ESNext", "dom"],
+        "module": "Preserve",
+        "moduleResolution": "Bundler",
+        "strict": false,
         "esModuleInterop": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": false,
+        "allowImportingTsExtensions": true,
+        "declaration": true,
+        "emitDeclarationOnly": true,
+        "resolveJsonModule": true,
+        "noImplicitAny": false,
+        "allowJs": true,
+        "checkJs": false,
+        "noEmitOnError": false,
+        "moduleDetection": "force",
+        "allowArbitraryExtensions": true
     },
     "include": ["src/**/*.ts", "src/**/*.d.ts"]
 }
