--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "strict": false,
         "esModuleInterop": true,
         "skipLibCheck": true,
+        "typeRoots":["./node_modules/@types"],
         "forceConsistentCasingInFileNames": false,
         "allowImportingTsExtensions": true,
         "declaration": true,
